Overlap Fix
Fixed a bug that made the Categories Buttons overlap the Item Title Input.

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -100,10 +100,4 @@
   }
 }
 
-.vertical-center {
-  position: relative;
-  top: 50%;
-  transform: translateY(-60%);
-}
-
 
